examples/static-ip/nginx/static-ip-svc.yaml
# This is the backend service
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-lb
  namespace: kube-system
  annotations:
    service.beta.kubernetes.io/external-traffic: OnlyLocal
    service.beta.kubernetes.io/alicloud-loadbalancer-ProtocolPort: "http:80,http:443"
    service.beta.kubernetes.io/alicloud-loadbalancer-HealthCheckFlag: off
    service.beta.kubernetes.io/alicloud-loadbalancer-Bandwidth: 60
  labels:
    app: nginx-ingress-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
    targetPort: 80
  - port: 443
    name: https
    targetPort: 443
  selector:
    # Selects nginx-ingress-controller pods
    k8s-app: nginx-ingress-controller
